Hero Section Configured

--- a/src/components/sections/HomeMain.module.css
+++ b/src/components/sections/HomeMain.module.css
@@ -1,3 +1,6 @@
 .homeMain > div {
     height: 100vh !important;
+    background-image: url('../../img/home.jpg');
+    background-size: cover;
+    background-position: bottom;
 }
