--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,18 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  html {
-      font-size: 62.5%;
-  }
-  
-  body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    background: #f0f0f0;
-    user-select: none;
-  }
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
+body {
+  background: #f0f0f0;
+  user-select: none;
+}
