--- a/src/components/layout/Navigation.module.css
+++ b/src/components/layout/Navigation.module.css
@@ -1,37 +1,38 @@
 .navbar {
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 7rem;
-    display: flex;
-    flex-direction: column;
-    border-radius: 50%;
-    border-right: 0.7rem solid #272727;
-    justify-content: space-between;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #f0f0f0;
+  z-index: 100;
+  width: 7rem;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0 50% 50% 0;
+  border-right: 0.7rem solid #272727;
+  justify-content: space-between;
 }
 
 .logo {
-    align-self: center;
-    width: max-content;
-    transform: rotate(-90deg);
-    font-family: 'Raleway', sans-serif;
-    font-size: 2rem;
-    font-weight: 700;
+  align-self: center;
+  width: max-content;
+  transform: rotate(-90deg);
+  font-family: "Raleway", sans-serif;
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 .menu {
-    margin-left: 1.3rem;
-    padding-top: 2rem;
-    font-size: 2rem;
+  margin-left: 1.3rem;
+  padding-top: 2rem;
+  font-size: 2rem;
 }
 
 .socials {
-    display: flex;
-    flex-direction: column;
-    margin-left: 1.1rem;
-    font-size: 2rem;
-    gap: 0.7rem;
-    padding-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  margin-left: 1.1rem;
+  font-size: 2rem;
+  gap: 0.7rem;
+  padding-bottom: 2rem;
 }
