--- a/src/components/layout/Navigation.module.css
+++ b/src/components/layout/Navigation.module.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #f0f0f0;
+  background-color: #ffffff;
   z-index: 100;
   width: 7rem;
   display: flex;
@@ -35,4 +35,33 @@
   font-size: 2rem;
   gap: 0.7rem;
   padding-bottom: 2rem;
+}
+
+.logoanimate {
+  animation: hello 1s ease-in-out;
+}
+.navanimate {
+  animation: hello 1s ease-in-out;
+}
+
+.navigation {
+  display: flex;
+  transform: rotate(-90deg);
+  list-style: none;
+  gap: 1.8rem;
+  font-size: 1.4rem;
+  text-transform: capitalize;
+  font-weight: 500;
+  margin-bottom: -15rem;
+}
+
+@keyframes hello {
+  from {
+    opacity: 0;
+    transform: translateY(-5rem) rotate(-90deg);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0rem) rotate(-90deg);
+  }
 }
