--- a/src/components/sections/Hero/HomeMain.module.css
+++ b/src/components/sections/Hero/HomeMain.module.css
@@ -1,6 +1,6 @@
 .homeMain > div {
     height: 100vh !important;
-    background-image: url('../../img/home.jpg');
+    background-image: url('../../../img/home.jpg');
     background-size: cover;
     background-position: bottom;
 }
