--- a/src/components/sections/Portfolio/Portfolio.module.css
+++ b/src/components/sections/Portfolio/Portfolio.module.css
@@ -19,3 +19,20 @@
 .color {
     color: black;
 }
+
+@media screen and (max-width: 30em) {
+    .portfolio {
+        padding: 4rem 3rem;
+    }
+    .primary {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: max-content max-content;
+        align-items:flex-start;
+    }
+    .portfolioText {
+        text-align: left;
+        padding-left: 0;
+        margin-top: 2rem;
+    }
+}
