Teams Section Configured

--- a/src/components/sections/Team/Team.module.css
+++ b/src/components/sections/Team/Team.module.css
@@ -17,3 +17,26 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
+@media screen and (max-width: 30em) {
+    .team {
+        padding: 4rem 3rem;
+    }
+    .color {
+        font-size: 4.5rem;
+    }
+    .primary {
+        display: grid;
+        grid-template-columns: 100% ;
+        grid-template-rows: max-content max-content;
+    }
+    .secondary {
+        grid-row: 2 / -1;
+        margin-top: 3rem;
+    }
+    .teamDiv {
+        font-size: 1.4rem;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: max-content max-content;
+    }
+}
