About Made Responsive

--- a/src/components/sections/About/About.module.css
+++ b/src/components/sections/About/About.module.css
@@ -44,7 +44,12 @@
   border-radius: 0.4rem;
   box-shadow: 0 4rem 6rem #ffffff3a;
   /* background-color: rgba(255, 255, 255, 0.85); */
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.75)), url('./d.jpg');
+  background-image: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0.85),
+      rgba(255, 255, 255, 0.75)
+    ),
+    url("./d.jpg");
   background-size: cover;
   backdrop-filter: blur(5px);
 }
@@ -61,5 +66,33 @@
 }
 
 @media screen and (max-width: 30em) {
-  
+  .primary {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: max-content max-content;
+  }
+  .about {
+    padding: 4rem 3rem;
+  }
+  .secondary {
+    grid-row: 2 / -1;
+    margin-top: 0rem;
+  }
+  .data {
+    grid-template-columns: 100%;
+    grid-template-rows: repeat(3, max-content);
+    margin-top: 4rem;
+    width: 100%;
+    grid-column-gap: 0rem;
+    margin-left: 0rem;
+  }
+  .aboutDiv {
+    margin-top: 3rem;
+    font-size: 1.4rem;
+    padding-right: 0;
+  }
+  .dataitem {
+    box-shadow: 0 6rem 20rem #ffffff3a;
+    margin-bottom: 2rem;
+  }
 }
