--- a/src/components/sections/Portfolio/Portfolio.module.css
+++ b/src/components/sections/Portfolio/Portfolio.module.css
@@ -1,38 +1,59 @@
 .portfolio {
-    padding: 6rem 7rem 6rem 9rem;
+  padding: 6rem 7rem 6rem 9rem;
 }
 .primary {
-    display: grid;
-    grid-template-columns: max-content 1fr;
-    align-items:flex-end;
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  align-items: flex-end;
 }
 .portfolioText {
-    text-align: right;
-    padding-left: 20rem;
-    font-size: 1.4rem;
+  text-align: right;
 }
-
+.portfolioText > p {
+  padding-left: 20rem;
+  font-size: 1.4rem;
+}
+.portfolioText > button {
+  outline: none;
+  border: none;
+  background-color: #020001;
+  border-radius: 6rem;
+  cursor: pointer;
+  margin-top: 1rem;
+  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  padding: 1.4rem 3.2rem;
+  transition: all 0.2s;
+}
+.portfolioText > button:hover {
+    transform: scale(0.9);
+}
+.portfolioText > button > a {
+  color: #fff;
+  transition: all 0.2s;
+  letter-spacing: 0.2rem;
+  font-weight: 500;
+}
 .pictures {
-    margin-top: 6rem;
+  margin-top: 6rem;
 }
 
 .color {
-    color: black;
+  color: black;
 }
 
 @media screen and (max-width: 30em) {
-    .portfolio {
-        padding: 4rem 3rem;
-    }
-    .primary {
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: max-content max-content;
-        align-items:flex-start;
-    }
-    .portfolioText {
-        text-align: left;
-        padding-left: 0;
-        margin-top: 2rem;
-    }
+  .portfolio {
+    padding: 4rem 3rem;
+  }
+  .primary {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: max-content max-content;
+    align-items: flex-start;
+  }
+  .portfolioText {
+    text-align: left;
+    padding-left: 0;
+    margin-top: 2rem;
+  }
 }
